--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 
 
+	// https://mvnrepository.com/artifact/org.projectlombok/lombok
+	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
+	annotationProcessor('org.projectlombok:lombok:1.18.30')
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
